# MLModelTrainer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  python-ci.yml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
my_project/.ipynb_checkpoints/: train-checkpoint.py
src/: train.py
tests/: test_add.py
